--- a/style.css
+++ b/style.css
@@ -1,19 +1,44 @@
 .email-background {
   background-color: #fff; }
 
-header {
-  background-color: #fff; }
-
 .email-container {
   max-width: 700px;
   color: #1b1c1e;
-  background-color: #1a4a8a;
-  height: 500px;
+  background-color: #fff;
+  height: auto;
   margin: 0 auto;
   overflow: hidden;
   border-radius: 5px; }
 
 img {
   max-width: 50%; }
+
+.header {
+  background-color: #fff;
+  padding: 10px; }
+
+.logo {
+  text-align: left; }
+
+.location {
+  text-align: right; }
+
+table {
+  width: 100%;
+  text-align: center;
+  border-spacing: 0px; }
+
+.banner {
+  background-color: #1a4a8a;
+  height: 200px; }
+
+.left-section {
+  background-color: #1b1c1e;
+  height: 400px;
+  width: 50%; }
+
+.right-section {
+  background-color: #1a4a8a;
+  width: 50%; }
 
 
