--- a/style.scss
+++ b/style.scss
@@ -2,28 +2,22 @@ $primarycolor: #1a4a8a;
 $blackcolor: #1b1c1e;
 
 .email-background {
-    background-color: #fff;
+    background-color:$blackcolor;
+    margin: 0 auto;
 }
 
 .email-container {
-    max-width: 700px;
+    max-width: 600px;
     color: $blackcolor;
     background-color: #fff;
     height: auto;
     margin: 0 auto;
     overflow: hidden;
-    border-radius: 5px;
-}
-
-img {
-    max-width: 50%;
 }
 
 .header {
     background-color: #fff;
-    padding: 10px;
 }
-
 
 .logo {
     text-align: left;
@@ -45,9 +39,13 @@ table {
     height: 200px;
 }
 
+.main {
+    height: 600px;
+    text-align: left;
+}
+
 .left-section {
     background-color: $blackcolor;
-    height: 400px;
     width: 50%;
     color: white;
 }
