--- a/style.css
+++ b/style.css
@@ -26,10 +26,11 @@ table {
 
 .banner {
   background-color: #1a4a8a;
-  height: 200px; }
+  height: 200px;
+  color: #fff; }
 
 .main {
-  height: 600px;
+  height: auto;
   text-align: left; }
 
 .left-section {
