--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ body {
   margin: 0 auto;
   overflow: hidden;
   font-family: helvetica;
-  font-size: 16px; }
+  font-size: 14px;
+  line-height: 1.5; }
 
 .header {
   background-color: #fff;
@@ -63,6 +64,7 @@ table {
   padding: 10px 30px; }
 
 .footer {
+  font-size: 12px;
   background-color: #1b1c1e;
   color: #fff;
   padding: 20px; }
