--- a/style.css
+++ b/style.css
@@ -1,72 +1,139 @@
 body {
-  margin: 0; }
+  margin: 0;
+  background-color: #1b1c1e; }
 
 .email-background {
   background-color: #0e0e0e;
   margin: 0 auto; }
 
 .email-container {
-  max-width: 600px;
+  width: 900px;
   color: #1b1c1e;
   background-color: #fff;
   height: auto;
   margin: 0 auto;
   overflow: hidden;
-  font-family: helvetica;
-  font-size: 14px;
-  line-height: 1.5; }
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+  line-height: 1.5;
+  text-align: center; }
 
 .header {
-  background-color: #fff;
-  padding: 10px 20px; }
+  background-color: #fff; }
 
 .logo {
-  text-align: left; }
+  text-align: left;
+  padding-left: 30px;
+  max-width: 250px; }
+
+.ford {
+  max-width: 250px;
+  text-align: center;
+  padding: 0;
+  vertical-align: bottom;
+  position: relative;
+  top: 40px; }
+
+.ford2 {
+  max-width: 250px;
+  vertical-align: top;
+  position: relative;
+  bottom: 40px; }
 
 .location {
-  text-align: right; }
+  text-align: right;
+  padding-right: 33px;
+  font-weight: 700;
+  max-width: 250px; }
 
 table {
   width: 100%;
   text-align: center;
   border-spacing: 0px; }
 
-.banner {
-  background-color: #1a4a8a;
-  height: 200px;
-  color: #fff; }
+.divider {
+  background-color: #1a4a8a; }
 
-.banner h1 {
-  padding: 0px 100px; }
+.banner {
+  background-image: url("banner.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-color: #1a4a8a;
+  height: 356px;
+  color: #fff; }
+  .banner h1 {
+    font-size: 39px;
+    font-weight: 700;
+    padding: 100px; }
 
 .main {
   height: auto;
   text-align: left; }
+  .main p, .main h2 {
+    padding: 10px 20px; }
+
+.gear-img, .car-img {
+  position: relative;
+  z-index: 1; }
 
 .left-section {
   background-color: #1b1c1e;
   width: 50%;
   color: white;
-  padding: 20px; }
+  vertical-align: top; }
+
+.rectangle {
+  min-width: 450px;
+  max-width: 450px;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  position: absolute;
+  z-index: 2; }
 
 .right-section {
   background-color: #1a4a8a;
   width: 50%;
   color: white;
-  padding: 20px; }
+  vertical-align: top; }
 
 .ford-pass {
+  background-image: url("fordpass.png");
   background-color: #355e81;
   color: #fff;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  max-width: 100%; }
 
 .heritage p {
   padding: 10px 30px; }
 
+.showroom {
+  background-image: url("/showroom.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 359px;
+  color: #fff; }
+
+.rectangle2 {
+  min-width: 450px;
+  max-width: 450px;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  position: absolute;
+  padding: 0 220px;
+  z-index: 2; }
+
 .footer {
-  font-size: 12px;
+  font-size: 14px;
   background-color: #1b1c1e;
   color: #fff;
+  padding: 20px; }
+
+ul.social-icons li {
+  list-style-type: none;
+  display: inline-block;
   padding: 20px; }
 
 
