--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ table {
   padding: 10px 30px; }
 
 .showroom {
-  background-image: url("/showroom.png");
+  background-image: url("showroom.png");
   background-repeat: no-repeat;
   background-size: cover;
   height: 359px;
