--- a/style.scss
+++ b/style.scss
@@ -134,7 +134,7 @@ p, h2 {
 }
 
 .showroom {
-    background-image: url("/showroom.png");
+    background-image: url("showroom.png");
     background-repeat: no-repeat;
     background-size: cover;
     height: 359px;
