--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   margin: 0 auto; }
 
 .email-container {
-  width: 900px;
+  max-width: 900px;
   color: #1b1c1e;
   background-color: #fff;
   height: auto;
@@ -23,28 +23,26 @@ body {
 
 .logo {
   text-align: left;
-  padding-left: 30px;
-  max-width: 250px; }
-
-.ford {
-  max-width: 250px;
-  text-align: center;
-  padding: 0;
-  vertical-align: bottom;
-  position: relative;
-  top: 40px; }
-
-.ford2 {
-  max-width: 250px;
-  vertical-align: top;
-  position: relative;
-  bottom: 40px; }
+  padding: 20px 30px; }
 
 .location {
   text-align: right;
   padding-right: 33px;
-  font-weight: 700;
-  max-width: 250px; }
+  font-weight: 700; }
+
+.ford {
+  max-width: 100%; }
+  .ford img {
+    position: relative;
+    vertical-align: bottom;
+    top: 40px; }
+
+.ford2 {
+  max-width: 100%; }
+  .ford2 img {
+    position: relative;
+    vertical-align: top;
+    bottom: 40px; }
 
 table {
   width: 100%;
@@ -55,7 +53,7 @@ table {
   background-color: #1a4a8a; }
 
 .banner {
-  background-image: url("banner.png");
+  background-image: url("https://i.imgur.com/8vAYc1z.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -74,6 +72,7 @@ table {
     padding: 10px 20px; }
 
 .gear-img, .car-img {
+  max-width: 100%;
   position: relative;
   z-index: 1; }
 
@@ -83,15 +82,6 @@ table {
   color: white;
   vertical-align: top; }
 
-.rectangle {
-  min-width: 450px;
-  max-width: 450px;
-  max-height: 100%;
-  width: auto;
-  height: auto;
-  position: absolute;
-  z-index: 2; }
-
 .right-section {
   background-color: #1a4a8a;
   width: 50%;
@@ -99,31 +89,24 @@ table {
   vertical-align: top; }
 
 .ford-pass {
-  background-image: url("fordpass.png");
+  background-image: url("https://i.imgur.com/bqgrkO4.png");
   background-color: #355e81;
   color: #fff;
   text-transform: uppercase;
   max-width: 100%; }
 
+.fordpass a {
+  color: #fff; }
+
 .heritage p {
   padding: 10px 30px; }
 
 .showroom {
-  background-image: url("showroom.png");
+  background-image: url("https://i.imgur.com/Jb7Tvqi.png");
   background-repeat: no-repeat;
   background-size: cover;
   height: 359px;
   color: #fff; }
-
-.rectangle2 {
-  min-width: 450px;
-  max-width: 450px;
-  max-height: 100%;
-  width: auto;
-  height: auto;
-  position: absolute;
-  padding: 0 220px;
-  z-index: 2; }
 
 .footer {
   font-size: 14px;
@@ -131,9 +114,16 @@ table {
   color: #fff;
   padding: 20px; }
 
+.social-icons {
+  padding: 0; }
+
 ul.social-icons li {
   list-style-type: none;
   display: inline-block;
   padding: 20px; }
+
+@media screen and (min-width: 300px) {
+  .ford-pass h1 {
+    font-size: 30px; } }
 
 
