--- a/style.scss
+++ b/style.scss
@@ -30,33 +30,37 @@ body {
 
 .logo {
     text-align: left;
-    padding: 20px 30px;
+    padding: 20px 0px 0px 10px;
+}
+
+.logo2 {
+    text-align: left;
+    padding: 0px 20px 0px 10px;
 }
 
 .location {
     text-align: right;
     padding-right: 33px;
     font-weight: 700;
-
 }
 
 .ford {
     max-width: 100%;
+    position: relative;
+    top: 40px;
 
     img {
-        position: relative;
-        vertical-align: bottom;
-        top: 40px;
+        vertical-align: bottom;  
     }
 }
 
 .ford2 {
     max-width: 100%;
+    position: relative;
+    bottom: 40px;
 
     img {
-        position: relative;
         vertical-align: top;
-        bottom: 40px;
     }
 }
 
@@ -81,9 +85,7 @@ table {
     color: #fff;
 
     h1 {
-        font-size: 39px;
         font-weight: 700;
-        padding: 100px;
     }
 }
 
@@ -156,8 +158,30 @@ ul.social-icons li {
     padding: 20px;
 }
 
-@media screen and (min-width: 300px) {
+@media only screen and (min-width: 200px) and (max-width: 600px) {
+    p, li {
+        font-size: 14px;
+    }
+
+    h1 {
+        font-size: 30px;
+        padding: 0;
+    }
+
+    h2 {
+        font-size: 20px;
+    }
+
     .ford-pass h1 {
-font-size: 30px;
+        font-size: 20px;
+    }
+
+    .logo img {
+        padding: 10px;
+        margin: 0;
+    }
+
+    .location {
+        text-align: center;
     }
 }
