--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ table {
   padding: 10px 30px; }
 
 .showroom {
-  background-image: url("https://i.imgur.com/Jb7Tvqi.png");
+  background-image: url("https://i.imgur.com/zUPv8DJ.png");
   background-repeat: no-repeat;
   background-size: cover;
   height: 359px;
