--- a/style.scss
+++ b/style.scss
@@ -134,7 +134,7 @@ p, h2 {
 }
 
 .showroom {
-    background-image: url("https://i.imgur.com/Jb7Tvqi.png");
+    background-image: url("https://i.imgur.com/zUPv8DJ.png");
     background-repeat: no-repeat;
     background-size: cover;
     height: 359px;
