--- a/style.css
+++ b/style.css
@@ -93,6 +93,8 @@ table {
 .ford-pass {
   background-image: url("https://i.imgur.com/bqgrkO4.png");
   background-color: #355e81;
+  background-repeat: no-repeat;
+  background-size: 100%;
   color: #fff;
   text-transform: uppercase;
   max-width: 100%; }
@@ -106,7 +108,7 @@ table {
 .showroom {
   background-image: url("https://i.imgur.com/zUPv8DJ.png");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100%;
   height: 359px;
   color: #fff; }
 
@@ -124,25 +126,60 @@ ul.social-icons li {
   display: inline-block;
   padding: 20px; }
 
-@media only screen and (min-width: 200px) and (max-width: 600px) {
-  p, li {
-    font-size: 14px; }
+.mobile-header, .mobile-main {
+  display: none; }
 
-  h1 {
-    font-size: 30px;
-    padding: 0; }
+@media only screen and (max-width: 600px) {
+  .main {
+    display: none; }
 
-  h2 {
-    font-size: 20px; }
+  .mobile-main {
+    display: block;
+    text-align: left; }
 
-  .ford-pass h1 {
-    font-size: 20px; }
+  .gear, .car {
+    width: 100%;
+    background-image: url("https://i.imgur.com/97P4zD6.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-color: #1a4a8a;
+    height: 170px; }
 
-  .logo img {
-    padding: 10px;
-    margin: 0; }
+  .car {
+    background-image: url("https://i.imgur.com/27VKFWh.png"); }
 
-  .location {
-    text-align: center; } }
+  td.left-section {
+    padding: 10px; }
+
+  td.right-section {
+    padding: 10px; }
+
+  .email-container {
+    width: 100%; }
+
+  .header {
+    display: none; }
+
+  .mobile-header {
+    display: block;
+    width: 100%; }
+    .mobile-header img {
+      width: 100%; }
+
+  .ford-pass {
+    background-image: url("https://i.imgur.com/pjTeaZI.png");
+    max-width: 600px;
+    background-size: 100%; }
+    .ford-pass h1 {
+      font-size: 30px; }
+
+  .showroom {
+    height: 200px !important; }
+    .showroom h1 {
+      font-size: 20px; }
+    .showroom h2 {
+      font-size: 15px; }
+    .showroom p {
+      font-size: 12px; } }
 
 
